welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: not found: value muns
    if (lookingFor == muns(i)) {
                      ^